# forge17

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README.vi.md  architecture_v4.md  docker-compose.graphiti.yml  docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts  requirements-graphiti.txt  setup.sh  tsconfig.json
.antigravity/: mcp-manifest.json
.antigravity-plugin/: plugin.json
.antigravity/plugins/multica-orchestrator/: Dockerfile  README.md  SKILL.md  docker-compose.yml  plugin.json  pyproject.toml
.antigravity/plugins/multica-orchestrator/multica_orchestrator/: __init__.py
.antigravity/plugins/multica-orchestrator/multica_orchestrator/scripts/: __init__.py  agent_manager.py  base.py  daemon.py  mmx_executor.py  multica_cli.py  progress_streamer.py  task_queue.py  terminal_ui.py
.claude-plugin/: plugin.json
.cursor/: forgenexus-mcp.js  mcp.json
.forgewright/: skills-config.json
.github/: README_RULES.md
.gitnexus/: meta.json
.husky/: pre-commit
_local_tmp_edits/: page.tsx  route-projects.ts  route.ts  task-runner-latest.sh
antigravity/: README.md
config/: prettierrc
devops/: post-mortem
docs/: CLAUDE-CLI-SETUP.md  TASK-STATUS.md  chat-interpreter-test-results.md  facebook-post-token-studio.md  forgewright-flow-tests.md  game-build-gates.md  unity-mcp-cheatsheet.md  unity-mcp-setup.md  unity-mcp-tools-reference.md  unity-performance.md  unity-project-quickstart.md
forgenexus/: .eslintrc.json  .gitignore  AI_AUTO_SETUP.md  README.md  benchmark.ts  package-lock.json  package.json  vitest.config.ts
(+466 files in other folders)
