[project]
name = "forgewright-multica"
version = "1.0.0"
description = "Multi-agent orchestration for Forgewright"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "websockets>=12.0",
    "python-socketio>=5.11",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
forgewright-multica = "multica_orchestrator.scripts.multica_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["multica_orchestrator"]
